# jasper-plugins

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml  release.yml
ai-chat/: Cargo.toml  manifest.toml
ai-chat/src/: lib.rs
ai-polish/: Cargo.toml  manifest.toml
ai-polish/src/: lib.rs
joplin-theme/: README.md  manifest.toml
joplin-theme/themes/: joplin-dark.css  joplin-light.css
s3-storage/: Cargo.toml  manifest.toml
s3-storage/src/: lib.rs
scripts/: package.py
